# cpm-firmware

./: README.md  gdb_script  meson.build  my_cross
artemis-sensor/: NOTES.md  README.md  gdb_script  meson.build  my_cross
artemis-sensor/src/: main.c  morse.c
gateway/: .gitignore  README.md
gateway/esp32_gateway/esp32_spi_wifi_grist_bridge/: esp32_spi_wifi_grist_bridge.ino
gateway/esp32_gateway/esp32_test_SPI_slave/: esp32_test_SPI_slave.ino
gateway/esp32_gateway/esp32_wifi_grist_tx/: esp32_wifi_grist_tx.ino
gateway/htcc-ab02a/test_htcc_lora_rx/: test_htcc_lora_rx.ino
gateway/htcc-ab02a/test_sketch/: test_sketch.ino
include/: morse.h
include/example/: example.h
src/: example.c  main.c
